Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0
-
Windows 7
-
e5b7eec29191033fd71a782c18f5d8437e52856e
Description
Qt 5.2.0 Webkit crashes when opening Java applet that works correctly in Qt 4.8.5.
Example with Java applet paget to reproduce crass:
main.cpp
#include <QApplication> #include <QWebView> #include <QWebSettings> int main(int argc, char *argv[]) { QApplication a(argc, argv); QWidget w; QWebView view(&w); view.setGeometry(0,100,1000,500); QWebSettings::globalSettings()->setAttribute(QWebSettings::JavaEnabled, true); QWebSettings::globalSettings()->setAttribute(QWebSettings::PluginsEnabled, true); QWebSettings::globalSettings()->setAttribute(QWebSettings::JavascriptEnabled, true); view.load(QUrl("http://eassistant.nmmn.com/en/CompleteCheck.html")); w.show(); return a.exec(); }
EDIT: Crash happens only in debug mode. But page is still not seen correctly in release mode comparing to Google Chrome or Qt 4.8.5.
Attachments
Issue Links
- replaces
-
QTBUG-38067 [REG 5.0.2->5.2.1] Using .NET framework dlls will cause webkit to crash
-
- Closed
-
For Gerrit Dashboard: QTBUG-36591 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79549,2 | Account for extra guard page on Windows stack when using Java plugin. | stable | qt/qtwebkit | Status: MERGED | +2 | 0 |