Account for extra guard page on Windows stack when using Java plugin.

This fixes some ASSERTs when debugging applications that load pages
which contain Java applets.

Task-number: QTBUG-36591
Change-Id: I65971dc97c3b002a28646916b82a548496c4c4d9
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>